[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "numpy>=2.5.1",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]
